hphp/hack/test/typecheck/coeffects/conformance/primitive_as_context.php.exp
ERROR: File "primitive_as_context.php", line 4, characters 12-37:
Methods need to be marked `public`, `private`, `protected`, or `internal`. (Naming[2086])
ERROR: File "primitive_as_context.php", line 4, characters 40-44:
Illegal context: `int`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
ERROR: File "primitive_as_context.php", line 7, characters 41-48:
Illegal context: `string`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
