hphp/hack/test/typecheck/coeffects/conformance/primitive_as_context.php
<?hh

class Bad {
  function bad_int_cap_never_provided()[int]: void {}
}

function bad_string_cap_never_provided()[string]: void {}
